# gweled-sdl_mixer

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.in
data/: Makefile.am  Makefile.in  gweled.desktop.in  gweled.ui
po/: LINGUAS  POTFILES.in  ar.po  de.po  es.po  fi.po  fr.po  gweled.pot  he.po  hr.po  it.po  ja.po  ka.po  ms.po  nl.po  pl.po  pt_BR.po  ru.po  sl.po  tr.po  uk.po
sounds/: autonom.s3m
src/: Makefile.am  Makefile.in  board_engine.c  board_engine.h  callbacks.c  games-scores-backend.c  games-scores-dialog.c  graphic_engine.c  graphic_engine.h  main.c  main.h  sge_core.c  sge_core.h  sge_utils.c  sge_utils.h  sound.c  sound.h
